Implementing shine sync and other minor fixes

--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -8,7 +8,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Shared\Shared.csproj"/>
+        <ProjectReference Include="..\Shared\Shared.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Tomlyn" Version="0.11.0" />
     </ItemGroup>
 
 </Project>
