Add a simple discord bot to manage the server

--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -12,6 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="DSharpPlus" Version="4.3.0-nightly-01142" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     </ItemGroup>
 
