--- a/smo.service
+++ b/smo.service
@@ -9,7 +9,7 @@ StartLimitIntervalSec=0
 # change ExecStart to the path of the server file
 ExecStart="/home/user/SMOServer/Server"
 # change WorkingDirectory to the folder of your server
-# WorkingDirectory=/home/user/SMOServer/
+WorkingDirectory=/home/user/SMOServer/
 # ensure the service restarts after crashing
 Restart=always
 # amount of time to wait before restarting the service
