use a local directory instead of a named volume
This makes the settings.json more accessible from the outside by
default, but is less portable.

The -v command with $PWD might not work on native Windows shells, but
rather wants an absolute Windows path like C:\User\... or /c/User/...

And on Linux, because the /data/ directory and the settings.json will be
owned by root. Though that can be changed.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,11 @@
 version: "3.9"
 
-volumes:
-  smoo-data:
-
 services:
   server:
     image: ghcr.io/sanae6/smo-online-server
+    #build: .
+    #user: 1000:1000
     ports:
     - 1027:1027
     volumes:
-    - smoo-data:/data/
+    - ./data/:/data/
