--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     image: ghcr.io/sanae6/smo-online-server
     #build: .
     #user: 1000:1000
+    stdin_open: true
     ports:
     - 1027:1027
     volumes:
