--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,7 +49,7 @@ jobs:
       name: Set up QEMU
       uses: docker/setup-qemu-action@v2
       with:
-        platforms: amd64,arm64
+        platforms: amd64,arm64,arm32
     -
       name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
@@ -70,6 +70,6 @@ jobs:
         file       : ./Dockerfile
         tags       : ${{ steps.meta.outputs.tags }}
         labels     : ${{ steps.meta.outputs.labels }}
-        platforms  : linux/amd64,linux/arm64
+        platforms  : linux/amd64,linux/arm/v7,linux/arm64/v8
         cache-from : type=gha,scope=${{ github.workflow }}
         cache-to   : type=gha,scope=${{ github.workflow }},mode=max
