--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,7 +49,7 @@ jobs:
       name: Set up QEMU
       uses: docker/setup-qemu-action@v2
       with:
-        platforms: amd64,arm64,arm32
+        platforms: amd64,arm64,arm
     -
       name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
