--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,7 @@ on:
     tags:
     - '*.*.*'
     - 'v*.*.*'
+  workflow_dispatch: # or manual
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
