slightly increase docker build
The restore command doesn't need the full source code, but just the .csproj files.

(cherry picked from commit 391d02038547faf096cd53f383c4b57ba22f8ad5)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     #build: .
     #user: 1000:1000
     stdin_open: true
+    restart: unless-stopped
     ports:
     - 1027:1027
     volumes:
