--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -73,3 +73,35 @@ jobs:
         platforms  : linux/amd64,linux/arm/v7,linux/arm64/v8
         cache-from : type=gha,scope=${{ github.workflow }}
         cache-to   : type=gha,scope=${{ github.workflow }},mode=max
+    -
+      name: Build binary files
+      run: |
+        ./docker-build.sh  all
+    -
+      name : Upload Server
+      uses : actions/upload-artifact@v3
+      with:
+        name              : Server
+        path              : ./bin/Server
+        if-no-files-found : error
+    -
+      name : Upload Server.arm
+      uses : actions/upload-artifact@v3
+      with:
+        name              : Server.arm
+        path              : ./bin/Server.arm
+        if-no-files-found : error
+    -
+      name : Upload Server.arm64
+      uses : actions/upload-artifact@v3
+      with:
+        name              : Server.arm64
+        path              : ./bin/Server.arm64
+        if-no-files-found : error
+    -
+      name : Upload Server.exe
+      uses : actions/upload-artifact@v3
+      with:
+        name              : Server.exe
+        path              : ./bin/Server.exe
+        if-no-files-found : error
